add settings fot workbench color theme

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,5 +2,8 @@
     "name": "devcontainer",
     "build": {
         "dockerfile": "Dockerfile"
-    }
+    },
+    "settings": {
+        "workbench.colorTheme": "Default Dark+",
+    },       
 }
