add extension ms-vscode to devcontainer.json

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,5 +5,9 @@
     },
     "settings": {
         "workbench.colorTheme": "Default Dark+",
-    },       
+    },     
+    "extensions": [
+        "ms-vscode.go",
+    ],
+
 }
