add devcontainer with Ubuntu

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,8 +1,15 @@
 # [Choice] Alpine version: 3.14, 3.13, 3.12, 3.11
-
-ARG VARIANT=3.13
-
-FROM alpine:${VARIANT}
-
-RUN apk update; 
+#
+#ARG VARIANT=3.13
+#
+#FROM alpine:${VARIANT}
+#
+#RUN apk update; 
         # apk install wget; \
+
+FROM ubuntu:20.04
+
+RUN apt install wget; \
+        ls -al; \
+        mkdir -p /home/developer; \
+
