add Swift to devcontainer4

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,1 +1,6 @@
-FROM alpine3.14
+ARG VARIANT=5.5
+
+FROM swift:${VARIANT}
+
+# [Option] Upgrade OS packages to their latest versions
+# ARG UPGRADE_PACKAGES="false"
