add Perl 5 to devcontainer 5

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,1 +1,8 @@
-FROM alpine3.14
+ARG VARIANT=5
+
+FROM perl:${VARIANT}
+
+# [Option] Install zsh
+# ARG INSTALL_ZSH="true"
+
+# RUN apt-get update  
