--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,15 +1,2 @@
-# [Choice] Alpine version: 3.14, 3.13, 3.12, 3.11
-#
-#ARG VARIANT=3.13
-#
-#FROM alpine:${VARIANT}
-#
-#RUN apk update; 
-        # apk install wget; \
-
-FROM ubuntu:20.04
-
-RUN apt install wget; \
-        ls -al; \
-        mkdir -p /home/developer; \
+FROM alpine3.14
 
