--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,8 +1,1 @@
-ARG VARIANT=5
-
-FROM perl:${VARIANT}
-
-# [Option] Install zsh
-# ARG INSTALL_ZSH="true"
-
-# RUN apt-get update  
+FROM alpine:3.13
