--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,12 +1,11 @@
 {
-    "name": "Perl devcontainer",
+    "name": "devcontainer",
     "build": {
-        "dockerfile": "Dockerfile",
-		// Pick variant of Perl
-		"args": { "VARIANT": "5" }
-    }
-	 // Set *default* container specific settings.json values on container create. 
-	// "settings": {},
+        "dockerfile": "Dockerfile"
+    },
+    "settings": {
+        "workbench.colorTheme": "Default Dark+",
+    }, 
 
 	// Add the IDs of extensions you want installed when the container is created.
 	// Note that some extensions may not work in Alpine Linux. See https://aka.ms/vscode-remote/linux.
