add devcontainer 8 alpine with extension

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,5 +2,12 @@
     "name": "devcontainer",
     "build": {
         "dockerfile": "Dockerfile"
-    }
+    },
+    "settings": {
+        "workbench.colorTheme": "Default Dark+",
+    },     
+    "extensions": [
+        "ms-vscode.go",
+    ],
+
 }
